fix css to stretch image to full window length

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,9 @@
 body {
   background-image: url("../images/rainier.png");
-  background-repeat: no-repeat;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 h1,
